Fix 'baseurl' from _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >-
   and maybe express my opinion on topics related to data.
 
 domain: taksqth.github.io
-baseurl: /judgemangacover
+baseurl: /MangaCover
 url: https://taksqth.github.io
 
 twitter_username: exec_takeshi
